# my_history

./: README.md  pyproject.toml
src/my_history/: .cli2.py.swp  cli.py  cli2.py
src/my_history/db/: utils.py
tests/: test_cli.py  test_db.py
