[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[project.scripts]

cnt = "my_history.cli:query"
my-history = "my_history.cli2:query"

