[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
[project.scripts]

cnt = "my_history.cli:query"
my-history = "my_history.cli2:query"

