[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pdm.scripts]
test="pytest"
ctest="pytest --cov"
stest="pytest -s"
giti = "pip install git+https://github.com/oddsummer56/my_history.git@0.2.0/args"

[project.scripts]

cnt = "my_history.cli:query"
my-history = "my_history.cli2:cmd"

[project.urls]
Homepage = "https://github.com/oddsummer56/my_history"
Issues = "https://github.com/oddsummer56/my_history/issues"
